style.css
/* ... */
/* Buttons */
.homebuttons {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.homebuttons button {
    font-family: 'Poppins', 'Arial', sans-serif;
    width: 200px; 
    padding: 15px 0; 
    text-align: center; 
    margin: 20px 10px; 
    border-radius: 25px;
    font-weight: bold;
    border: 2px solid #ffffff;
    background: transparent;
    color: white;
    cursor: pointer;
    position: relative;
    overflow: hidden;
    transition: all 0.3s ease;
}

.homebuttons span {
    background: #9d9205; 
    height: 100%;
    width: 0;
    border-radius: 25px;
    position: absolute; 
    left: 0;
    bottom: 0;
    z-index: -1;
    transition: all 0.5s;
}

.homebuttons button:hover span{
    width: 100%;
}

.homebuttons button:hover {
    border: none;
}

/* Section Headings */
.home2text,
.home2imgtext {
    text-align: center;
    margin-bottom: 0;
}

.home2text h2,
.home2imgtext h2 {
    font-size:55px;
    margin-top:80px;
}

.home2text p {
    margin: 20px auto;
    font-weight: 100;
    line-height: 25px;
    margin-bottom: 0;
}

/* Projects Section */
.projects { 
    color: black;
    padding: 40px 20px;
}

.project-container {
    display: grid;
    grid-template-columns: repeat(2,1fr);
    align-items: center;
    gap: 2.5rem;
}

.project-box{
    background-color: white;
    border-radius: 3rem;
    border: 5px solid black;
    cursor: pointer;
    transition: 0.4s ease-in-out;
    margin: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-wrap: wrap;
    padding: 1rem;
    max-width: 100%;
}

.project-box:hover{
    background: #9d9205;
    color: black;
    transform:scale(1.05);
}

.project-box:active {
    background: #9d9205;
    color: black;
}

.project-box .project-info{
    display: flex;
    flex-direction: column;
    align-items: center; 
    justify-content: center; 
    padding: 1rem; 
}

.project-info h4{
    font-size: 2rem;
    font-weight: 800;
    line-height: 2;
}

.project-info h4 i.material-icons {
    font-size: 2.5rem;
    position: relative;
    top: 0.35rem;
}

.project-info p{
    font-size: 1.1rem;
    font-weight: 600;
    line-height: 1.7;
    margin: auto;
}

/* Image Slider */
.home2img {
    position: relative;
    min-height: 100vh;
    width: 100%; 
    padding: 20px;
    text-align: center;
}

.container {
    max-width: 2200px;
    width: 95%;
    margin: 0 auto;
}

.slider-wrapper {
    position: relative;
}

.slider-wrapper .slide-button {
    position: absolute;
    top: 50%;
    height: 50px;
    width: 50px;
    color: white;
    border: none;
    outline: none;
    background: black;
    font-size: 2.2rem;
    cursor: pointer;
    border-radius: 50%;
    transform: translateY(-50%);
}

.slider-wrapper .slide-button:hover {
    background: #9d9205;
}

.slider-wrapper .slide-button#prev-slide {
    left: -20px;
}

.slider-wrapper .slide-button#next-slide {
    right: -20px;
}

.slider-wrapper .image-list {
    display: grid;
    gap: 18px;
    font-size: 0;
    margin-bottom: 30px;
    overflow-x: auto;
    scrollbar-width: none;
    grid-template-columns: repeat(6, 1fr);
}

.slider-wrapper .image-list::-webkit-scrollbar {
    display: none;
}

.slider-wrapper .image-list .image-item {
    width: 725px;
    height: 700px;
    object-fit: cover;
}

.container .slider-scrollbar {
    height: 24px;
    width: 100%;
    display: flex;
    align-items: center;
}

.slider-scrollbar .scrollbar-track {
    height: 2px;
    width: 100%;
    background: #ccc;
    position: relative;
    border-radius: 4px;
}

.slider-scrollbar:hover .scrollbar-track {
    height: 4px;
}

.slider-scrollbar .scrollbar-thumb {
    position: absolute;
    height: 100%;
    width: 50%;
    background: black;
    border-radius: inherit;
    cursor: grab;
}

.slider-scrollbar .scrollbar-thumb:active {
    cursor: grabbing;
    height: 8px;
    top: -1px;
}

.slider-scrollbar .scrollbar-thumb::after {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: -10px;
    bottom: -10px;
}

/* About Us Section */
.about-us {
    padding:80px 0px;
}

.container{
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 20px;
}

.image-item {
    cursor: pointer;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.flex {
    flex: 0 0 50%;
    max-width: 50%;
    padding: 0 20px;
}

.about-us h2 {
    font-size: 45px;
    margin-bottom: 20px;
    color: #9d9205;
}

.about-us h3 {
    font-size: 22px;
    margin-bottom: 8px;
}

.about-us p {
    font-size: 18px;
    line-height: 1.5;
    margin-bottom: 20px;
}

.about-us img {
     display: block;
     max-width: 100%;
     height: auto;
     margin:0 auto;
}

.social-icons {
    margin-bottom: 20px;
}

.social-icons a {
    display: inline-block;
    width: 40px;
    height: 40px;
    line-height: 40px;
    text-align: center;
    border-radius: 50%; 
    margin-right: 10px;
    color: #fff;
    background-color: #9d9205;
    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
    transition: all 0.4s ease;
}

.social-icons a:hover{
    transform: translateY(-3px);
}

/* Action Button */
.action-btn button{
    font-family: 'Poppins';
    height: 40px; 
    border: none;
    padding: 10px 16px;
    border-radius: 12px;
    letter-spacing: 0.5px;
    cursor: pointer;
}

/* Contact Us Section */
.contactus {
    background-color: black;
    font-family: 'Poppins';
    padding: 40px 0;
}

.contactus h1 {
    color: white;
    margin: 20px;
    font-size: 40px;
    text-align: center;
}

.or-text {
    color:white;
    text-align: center;
    margin: 20px 0;
}

.handle{
    color: white;
}

.social-action {
    color: white;
}

.contact-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 24px;
    margin-top: 36px;
}
/* ... */

